# Stduy_language_CPlusPlus

./: .gitignore  README.md
DirectX12/: .editorconfig  .gitignore  DirectX12.sln  DirectX12.vcxproj  README.md
DirectX12/Coordinateransform/: BasicPixelShader.hlsl  BasicShaderHeader.hlsli  BasicVertexShader.hlsl  Coordinateransform.vcxproj  Coordinateransform.vcxproj.filters
DirectX12/IK/: IK.vcxproj  IK.vcxproj.filters
DirectX12/MultiPassRenderTarget/: MultiPassRenderTarget.vcxproj  MultiPassRenderTarget.vcxproj.filters
DirectX12/PMDModel/: BasicPixelShader.hlsl  BasicShaderHeader.hlsli  BasicVertexShader.hlsl  PMDModel.vcxproj  PMDModel.vcxproj.filters
DirectX12/Refactoring/: Refactoring.vcxproj  Refactoring.vcxproj.filters  packages.config
DirectX12/Refactoring2/: Refactoring2.vcxproj  Refactoring2.vcxproj.filters
DirectX12/SimplePolygon/: BasicPixelShader.hlsl  SimplePolygon.vcxproj  SimplePolygon.vcxproj.filters
DirectX12/SimpleTexture/: BasicShaderHeader.hlsli  BasicVertexShader.hlsl  SimpleTexture.vcxproj  SimpleTexture.vcxproj.filters  common.hpp
DirectX12/SimpleWindow/: SimpleWindow.vcxproj  SimpleWindow.vcxproj.filters
DirectX12/SkinningAnimation/: SkinningAnimation.vcxproj
FakeRPG/: .gitignore  FakeRPG.sln
FakeRPG/FakeRPG/: Character.h  Command.h  ConsoleFunction.cpp  (+5 more)
Reversi/: .gitignore  README.md  README.txt  Reversi.sln
SuperStar/: .clang-format  .gitattributes  .gitignore  Build.bat  CMakeLists.txt  Config.cmake  MEMO.md  ProjClean.bat  README.md  ThirdParty.md
SuperStar/HobbyEngine/Script/Generater/CreateModule/Template/: CMakeLists.txt  Config.cmake  Module.cpp  Module.h  README.md
SuperStar/HobbyPlugin/DxLib/: .gitignore  CMakeLists.txt  Config.cmake  DXLibFile.cpp  DXLibFile.h  DXLibInput.cpp  DXLibInput.h  DXLibModule.cpp  DXLibModule.h  DXLibRoot.cpp  DXLibRoot.h  DXLibTime.cpp  DXLibTime.h  README.md  ThirdPartyNotices.txt
SuperStar/HobbyPlugin/DxLib/Code/: DXLibFile.h  DXLibInput.h  DXLibTime.cpp  DXLibTime.h
SuperStar/HobbyPlugin/DxLib/DxLib/: DXLibFile.cpp  DXLibFile.h  DXLibInput.cpp  DXLibInput.h  DXLibScreen.cpp  DXLibScreen.h  DXLibSystem.cpp  DXLibSystem.h  DXLibTime.cpp  DXLibTime.h
(+891 files in other folders)
